Simplified loops and lists